--- a/acceso.html
+++ b/acceso.html
@@ -7,7 +7,6 @@
   <link href="css/hoja.css" rel="stylesheet" type="text/css">
 </head>
 
-<!-- Clase "acceso" para estilos sólo de esta página -->
 <body class="inner acceso">
 <div id="contenedor">
 
@@ -18,14 +17,14 @@
     <nav>
       <ul>
         <li><a href="reservar.html">Reservar</a></li>
-        <li><a href="checkin.html">Check-in</a></li>  <!-- ← corregido -->
+        <li><a href="checkin.html">Check-in</a></li> 
         <li><a href="ayuda.html">Ayuda</a></li>
         <li><a href="acceso.html">Acceso</a></li>
       </ul>
     </nav>
   </header>
 
-  <!-- Hero con imagen grande -->
+  
   <main class="acceso-hero">
     <div class="acceso-hero__content">
       <h1>Acceso</h1>
@@ -40,3 +39,4 @@
 </div>
 </body>
 </html>
+
