--- a/reservar.html
+++ b/reservar.html
@@ -16,7 +16,7 @@
   <nav>
     <ul>
     <li><a href="reservar.html">Reservar</a></li>
-    <li><a href="checking.html">Check-in</a></li>   <!-- ✅ Correcto -->
+    <li><a href="checking.html">Check-in</a></li> 
     <li><a href="ayuda.html">Ayuda</a></li>
     <li><a href="acceso.html">Acceso</a></li>
     </ul>
@@ -37,7 +37,7 @@
     </article>  
   </main>
 
-  <!-- Nueva sección de ofertas -->
+  
   <section class="ofertas">
     <h2 class="ofertas-titulo">OFERTAS DESDE <span>VILLAVICENCIO</span></h2>
 
@@ -81,4 +81,5 @@
 </div>
 </body>
 </html>
+
 
